--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,13 @@
 spring:
   application:
     name: xiaozhi
+  profiles:
+    include: secret
+langchain4j:
+  open-ai:
+    chat-model:
+      base-url: http://langchain4j.dev/demo/openai/v1
+      api-key: ${openai.api.key}
+      model-name: gpt-4o-mini
+      log-requests: true
+      log-responses: true
