--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
   <dependencies>
     <dependency>
       <groupId>dev.langchain4j</groupId>
+      <artifactId>langchain4j-ollama-spring-boot-starter</artifactId>
+      <version>1.0.0-beta5</version>
+    </dependency>
+    <dependency>
+      <groupId>dev.langchain4j</groupId>
       <artifactId>langchain4j-open-ai-spring-boot-starter</artifactId>
       <version>${langchain4j.version}</version>
     </dependency>
