--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
     <mybatis-plus.version>3.5.11</mybatis-plus.version>
   </properties>
   <dependencies>
+    <!--简单的rag实现-->
+    <dependency>
+      <groupId>dev.langchain4j</groupId>
+      <artifactId>langchain4j-easy-rag</artifactId>
+      <version>1.0.0-beta5</version>
+    </dependency>
     <dependency>
       <groupId>com.baomidou</groupId>
       <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
