--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
     <mybatis-plus.version>3.5.11</mybatis-plus.version>
   </properties>
   <dependencies>
+    <dependency>
+      <groupId>dev.langchain4j</groupId>
+      <artifactId>langchain4j-pinecone</artifactId>
+      <version>1.0.0-beta5</version>
+    </dependency>
     <!--简单的rag实现-->
     <dependency>
       <groupId>dev.langchain4j</groupId>
