--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,16 @@
     <mybatis-plus.version>3.5.11</mybatis-plus.version>
   </properties>
   <dependencies>
+    <!--流式输出-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>dev.langchain4j</groupId>
+      <artifactId>langchain4j-reactor</artifactId>
+      <version>1.0.0-beta5</version>
+    </dependency>
     <dependency>
       <groupId>dev.langchain4j</groupId>
       <artifactId>langchain4j-pinecone</artifactId>
