--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,7 +31,10 @@ langchain4j:
     dashscope:
       chat-model:
         api-key: ${DASH_SCOPE_API_KEY}
-        model-name: qwen-max
+        model-name: qwen-plus
+      streaming-chat-model:
+        api-key: ${DASH_SCOPE_API_KEY}
+        model-name: qwen-plus
       embedding-model:
         api-key: ${DASH_SCOPE_API_KEY}
         model-name: text-embedding-v3
